[project]
name = "pumpkin-api-py"
version = "0.1.0.dev0"
description = "Pumpkin plugin API for Python"
authors = [{name = "alex"}]
license = "GPL-3.0-only"
dependencies = [
    "componentize-py>=0.22.1",
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
pumpkin-api-build = "pumpkin_api.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pumpkin_api"]
include = ["src/pumpkin_api/wit_files/**/*.wit"]
