[project]
name = "pumpkin-api-py"
version = "0.1.0.dev2"
description = "Pumpkin plugin API for Python"
authors = [{name = "alex"}]
license = "GPL-3.0-only"
dependencies = [
    "componentize-py>=0.22.1",
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
pumpkin-plugin-build = "pumpkin_api.build:main"

[build-system]
requires = ["hatchling","componentize-py>=0.22.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/pumpkin_api",
    "hatch_build.py",
    "wit/repo/pumpkin-plugin-wit/v0.1"
]

[tool.hatch.build.targets.wheel]
include = ["src/pumpkin_api", "wit/repo/pumpkin-plugin-wit/v0.1/"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"bindings" = ""
"wit/repo/pumpkin-plugin-wit/v0.1/" = "pumpkin_api/wit"

[tool.hatch.build.targets.wheel.hooks.custom]
